k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  namespace: wisecow
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      name: wisecow-pod
      labels:
        app: wisecow
        tag: "06e891e"
    spec:
      containers:
        - name: wisecow-con
          image: sairathod/wisecow:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 4499
