k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 4499
    targetPort: 4499
  type: ClusterIP
